# rhythmic-programming-game

./: .gitignore  .gitmodules  README.md
app/src/main/cpp/: AudioPlayer.cpp  AudioPlayer.h  CMakeLists.txt  HighscoreFactory.cpp  HighscoreFactory.h  INIReader.cpp  INIReader.h  InstanceTracker.cpp  InstanceTracker.h  LaneSide.h  LevelFactory.cpp  LevelFactory.h  LevelScore.cpp  LevelStructs.cpp  MainGame.cpp  MainGame.h  ResourceManager.cpp  ResourceManager.h  ScoreStructs.cpp  System.h  main.cpp  properties.h
app/src/main/cpp/input/: BeatTypes.h  CMakeLists.txt  HitHandler.cpp  HitHandler.h  HitType.cpp  InputHandler.cpp  InputHandler.h
app/src/main/cpp/particles/: CMakeLists.txt  Interpolation.cpp  Interpolation.h  InterpolationType.h  Particle.cpp  Particle.h  ParticleAnimation.cpp  ParticleAnimation.h  ParticleAnimationLink.h  ParticleProperties.h  ParticleSystem.cpp  ParticleSystem.h  ParticleTemplate.cpp  ParticleTemplate.h
app/src/main/cpp/render/: CMakeLists.txt  DiffuseMaterial.cpp  DiffuseMaterial.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  OpenGLContext.cpp  OpenGLContext.h  Scene.cpp  Scene.h  Scene2D.cpp  Scene2D.h  Shader.cpp  Shader.h  ShaderManager.cpp  ShaderManager.h  ShaderSource.cpp  ShaderSource.h  Texture.cpp  Texture.h  Transform.cpp  Transform.h  Viewport.cpp  Viewport.h
app/src/main/cpp/screens/: CMakeLists.txt  Leaderboard.cpp  Leaderboard.h  LevelSelectionScreen.cpp  LevelSelectionScreen.h  ResultScreen.cpp  ResultScreen.h  TitleScreen.cpp  TitleScreen.h  UIScene.cpp  UIScene.h
app/src/main/cpp/services/: AudioService.cpp  AudioService.h  CMakeLists.txt  LogicService.cpp  LogicService.h  Observable.cpp  Observable.h  Observer.cpp  Observer.h  RenderService.cpp  RenderService.h  Service.cpp  Service.h  ServiceManager.cpp  ServiceManager.h  UIService.cpp  UIService.h  WorkspaceService.cpp  WorkspaceService.h
app/src/main/cpp/sprite/: CMakeLists.txt  Sprite.cpp  Sprite.h  SpriteDefinition.cpp  SpriteDefinition.h  SpriteString.cpp  SpriteString.h  Spritesheet.cpp  Spritesheet.h  SpritesheetFactory.cpp  SpritesheetFactory.h  SpritesheetFont.cpp  SpritesheetFont.h  SpritesheetFontFactory.cpp  SpritesheetFontFactory.h  StringRenderData.cpp
app/src/main/cpp/uiobjects/: BeatHitDetectionButton.cpp  BeatHitDetectionButton.h  BeatLane.cpp  BeatLane.h  CMakeLists.txt  HoldBeat.cpp  HoldBeat.h  Label.cpp  Label.h  LeaderboardButton.cpp  LeaderboardButton.h  LevelSelectionButton.cpp  LevelSelectionButton.h  MainMenuButton.cpp  MainMenuButton.h  PlayButton.cpp  (+17 more)
util/level-conv/: .gitignore  CMakeLists.txt  README.md
util/level-conv/src/: main.cpp
(+96 files in other folders)
